<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">爱情大本营</string>
    <string name="test">测试</string>
    <string name="history">记录</string>
    <!-- test -->
    <string name="btn_return">返回</string>
    <string name="test_start">测试开始</string>
    <!-- setting -->
    <string name="about">版本</string>
    <string name="ver">1.8</string>
    <string name="setting">设置</string>
    <string name="clean_summary">清空测试记录</string>
    <string name="clean_title">清空记录</string>
    <string name="star_summary">重置星星数量</string>
    <string name="star_title">星星数量清零</string>
    <string name="sound_summary">声音播放状态</string>
    <string name="sound_title">音效</string>
    <string name="sound_on">打开</string>
    <string name="sound_off">静音</string>
</resources>
