<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/setting">
    <Preference
        android:summary="@string/ver"
        android:title="@string/about" />
    <Preference
        android:key="clean"
        android:summary="@string/clean_summary"
        android:title="@string/clean_title" />
    <Preference
        android:key="star"
        android:summary="@string/star_summary"
        android:title="@string/star_title" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="sound"
        android:summary="@string/sound_summary"
        android:switchTextOff="@string/sound_off"
        android:switchTextOn="@string/sound_on"
        android:title="@string/sound_title" />
</PreferenceScreen>